--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,28 @@
                     </div>
                 </div>
             </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        How JavaScript is Undefined?
+                    </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <p>undefined is a property of the global object. That is, it is a variable in global scope. The initial value of undefined
+                        is the primitive value undefined.
+                        
+                        In all non-legacy browsers, undefined is a non-configurable, non-writable property. (Even when this is not the case,
+                        avoid overriding it.)
+                        
+                        A variable that has not been assigned a value is of type undefined. A method or statement also returns undefined if the
+                        variable that is being evaluated does not have an assigned value. A function returns undefined if a value was not
+                        returned.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
