--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 <body>
     <section class="container">
         <div>
-            <h1 class="text-center fs-1">Question</h1>
+            <h1 class="text-center fs-1 my-5">Question</h1>
         </div>
         <div class="accordion" id="accordionExample">
             <div class="accordion-item">
